--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,7 +33,7 @@ ConfiguredInternetSpeed=15000
 ConfiguredLanSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRE/ExampleMap/MotionControllerMap.MotionControllerMap
+EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -42,7 +42,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/VRE/Core/VRGameInstance.VRGameInstance_C
-GameDefaultMap=/Game/VRE/ExampleMap/MotionControllerMap.MotionControllerMap
+GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRE/Core/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
@@ -269,7 +269,7 @@ ChaosSettings=(DefaultThreadingModel=SingleThread,DedicatedThreadTickMode=Variab
 SolverOptions=(Iterations=8,CollisionPairIterations=1,PushOutIterations=4,CollisionPushOutPairIterations=4,CollisionMarginFraction=0.050000,CollisionMarginMax=10.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=100000.000000,JointPairIterations=1,JointPushOutPairIterations=1,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=False,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=False,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=False,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateContactGraph=True)
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.YourCompany.harvesterli
 StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
@@ -281,7 +281,7 @@ TargetSDKVersion=25
 InstallLocation=InternalOnly
 bEnableGradle=True
 bEnableLint=False
-bPackageDataInsideApk=False
+bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
 bForceSmallOBBFiles=False
@@ -379,11 +379,11 @@ HandTrackingSupport=ControllersAndHands
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 SpatializationPlugin=
+SourceDataOverridePlugin=
 ReverbPlugin=
 OcclusionPlugin=
 SoundCueCookQualityIndex=-1
 -TargetedRHIs=SF_VULKAN_SM5
-+TargetedRHIs=SF_VULKAN_SM5
 +TargetedRHIs=SF_VULKAN_ES31
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
