--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,13 +15,18 @@ bRequiresPushToTalk=true
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
+LaunchOnTarget=
 StagingDirectory=(Path="E:/DESKTOP/VRExpPluginTestMulti")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bUseIoStore=False
+bUseZenStore=False
+bMakeBinaryConfig=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -29,12 +34,23 @@ bForceOneChunkPerFile=False
 MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
-PakFileCompressionFormats=
-PakFileAdditionalCompressionOptions=
+WriteBackMetadataToAssetRegistry=Disabled
+bCompressed=True
+PackageCompressionFormat=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PackageAdditionalCompressionOptions=
+PackageCompressionMethod=Kraken
+PackageCompressionLevel_DebugDevelopment=4
+PackageCompressionLevel_TestShipping=5
+PackageCompressionLevel_Distribution=7
+PackageCompressionMinBytesSaved=1024
+PackageCompressionMinPercentSaved=5
+bPackageCompressionEnableDDC=False
+PackageCompressionMinSizeToConsiderDDC=0
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=False
+bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
@@ -45,8 +61,53 @@ InternationalizationPreset=English
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=True
-bCompressed=True
 bSkipEditorContent=False
 bSkipMovies=False
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
++IniSectionDenylist=HordeStorageServers
++IniSectionDenylist=StorageServers
 +DirectoriesToAlwaysCook=(Path="/Game/VRE")
++DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
++DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
++DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
++DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
++DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
+PerPlatformBuildConfig=()
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
+PerPlatformBuildTarget=()
 
